fix contrast for niveau infestation #669

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -17,7 +17,7 @@ span.niveau-infestation {
         background-color: var(--success-425-625);
     }
     &.niveau-1 {
-        background-color: var(--orange-terre-battue-main-645);
+        background-color: var(--yellow-tournesol-925-125);
         color: var(--grey-200-850);
     }
     &.niveau-2 {
@@ -498,7 +498,7 @@ span.image-caption {
                     background-color: var(--success-425-625);
 
                     &.number-1 {
-                        background-color: var(--orange-terre-battue-main-645);
+                        background-color: var(--yellow-tournesol-925-125);
                         color: var(--grey-200-850);
                     }
 
